fix: #1191 Confirmation popup has too many white space (#1268)

--- a/frontend/src/assets/styles/styles.scss
+++ b/frontend/src/assets/styles/styles.scss
@@ -68,4 +68,7 @@ body {
             white-space: nowrap;
         }
     }
+    .p-dialog {
+        max-width: 40rem !important;
+    }
 }
